--- a/FinalPage2.html
+++ b/FinalPage2.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <title></title>
+        <meta charset="UTF-8">
+        <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Final Project</title>
         <link type="text/css" rel="stylesheet" href="style.css"/>
     </head>
-    <body>
+    <body window.onload = function() {onload()}>
         <header>
             <h1>Animes to Watch Page Two</h1>
         </header>
         <nav>
             <div class="button"> 
-                <a href="">s</a>
+                <a href="">Page One</a>
             </div>
             <div class="button"> 
-                <a href="">s</a>
+                <a href="">Page Two</a>
             </div>
             <div class="button"> 
-                <a href="">s</a>
+                <a href="">Page Three</a>
+            </div>
+            <div class="button">
+                <button class="nav-item"><a role="button" onclick="darkmode()">Toggle Me</a></button>
             </div>
         </nav>
         <div class="content">
             <main>
-                <p>This is the main.</p>
-            <img src="Images/BYR_color_wheel.svg">
+                <p>Hello!</p>
             </main>
             <aside>
-                <p>This is the aside.</p>
-                <img src="Images/BottlePhotgraphy.jfif">
+                <p>Hello! This is page two of my final project for my Web Development class. On this page there is a table of all the previously mentioned animes in page one. This will have the name of the anime, the release date, how many episodes it has, and an image from the anime. Happy reading!</p>
             </aside>
         </div>
-        <footer>Footer</footer>
+        <footer></footer>
     </body>
 </html>
