--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
+    <head> 
+        <meta charset="UTF-8">
+        <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Final Project</title>
         <link type="text/css" rel="stylesheet" href="style.css"/>
     </head>
-    <body>
+    <body window.onload = function() {onload()}>
         <header>
             <h1>Animes to Watch Page One</h1>
         </header>
@@ -21,7 +22,7 @@
                 <a href="">Page Three</a>
             </div>
             <div class="button">
-                <a href="#" onclick="myFunction()">Toggle dark mode</a>
+                <a href="#" onclick="darkmode()">Toggle dark mode</a>
             </div>
         </nav>
         <div class="content">
@@ -33,11 +34,5 @@
             </aside>
         </div>
         <footer></footer>
-        <script>
-                function myFunction() {
-                    var element = document.body;
-                    element.classList.toggle("dark-mode");
-                    }
-        </script>
     </body>
 </html>
