--- a/FinalPage3.html
+++ b/FinalPage3.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <title></title>
+        <meta charset="UTF-8">
+        <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Final Project</title>
         <link type="text/css" rel="stylesheet" href="style.css"/>
+        <script src="script.js"></script>
     </head>
-    <body>
+    <body window.onload = function() {onload()}>
         <header>
             <h1>Animes to Watch Page Three</h1>
         </header>
         <nav>
             <div class="button"> 
-                <a href="">s</a>
+                <a href="">Page One</a>
             </div>
             <div class="button"> 
-                <a href="">s</a>
+                <a href="">Page Two</a>
             </div>
             <div class="button"> 
-                <a href="">s</a>
+                <a href="">Page Three</a>
+            </div>
+            <div class="button">
+                <a href="#" onclick="darkmode()">Toggle dark mode</a>
             </div>
         </nav>
         <div class="content">
             <main>
-                <p>This is the main.</p>
-            <img src="Images/BYR_color_wheel.svg">
+                <p>Hello!</p>
             </main>
             <aside>
-                <p>This is the aside.</p>
-                <img src="Images/BottlePhotgraphy.jfif">
+                <p>This is the final page in my final project for Web Development. On this page I'll be listing some more animes, and my favorites that you've been shown today. They will be ranked from favorite to least favorite. Thank you for looking at the website, have a good day!</p>
             </aside>
         </div>
-        <footer>Footer</footer>
+        <footer></footer>
     </body>
 </html>
