--- a/FinalPage3.html
+++ b/FinalPage3.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Final Project</title>
         <link type="text/css" rel="stylesheet" href="style.css"/>
-        <script src="script.js"></script>
     </head>
     <body window.onload = function() {onload()}>
         <header>
@@ -14,16 +13,15 @@
         </header>
         <nav>
             <div class="button"> 
-                <a href="">Page One</a>
+                <a href="FinalProject1.html">Page One</a>
             </div>
             <div class="button"> 
-                <a href="">Page Two</a>
+                <a href="FinalProject2.html">Page Two</a>
             </div>
             <div class="button"> 
-                <a href="">Page Three</a>
+                <a href="FinalProject3.html">Page Three</a>
             </div>
             <div class="button">
-                <a href="#" onclick="darkmode()">Toggle dark mode</a>
             </div>
         </nav>
         <div class="content">
@@ -35,5 +33,7 @@
             </aside>
         </div>
         <footer></footer>
+        <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
