--- a/FinalProject1.html
+++ b/FinalProject1.html
@@ -4,39 +4,42 @@
         <meta charset="UTF-8">
         <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Final Project</title>
+        <meta name="author" content="Jason Musser">
+        <meta name="keywords" content="shonen, final, anime">
+        <meta name="description" content="This is Jasons final project.">
+        <title>Page One</title>
         <link type="text/css" rel="stylesheet" href="style.css"/>
     </head>
     <body window.onload = function() {onload()}>
         <header>
             <h1>Animes to Watch Page One</h1>
         </header>
-        <nav>
-            <div class="button"> 
-                <a href=FinalProject1.html>Page One</a>
-            </div>
-            <div class="button"> 
-                <a href="FinalProject2.html">Page Two</a>
-            </div>
-            <div class="button"> 
-                <a href="FinalProject3.html">Page Three</a>
-            </div>
-            <div class="button">
-            </div>
-        </nav>
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="FinalProject1.html">Page One</a></li>
+                    <li><a href="FinalProject2.html">Page Two</a></li>
+                    <li><a href="FinalProject3.html">Page Three</a></li>
+                </ul>
+            </nav>
         <div class="content">
             <main>
-                <h2>Anime's I think you should watch, based on my own personal opinions.<br></h2>
+                <div class="pageOneMain">
+                    <h2>Anime's I think you should watch, based on my own personal opinions.<br></h2>
                 <p>Demon Slayer: Kimetsu no Yaiba; Demon Slayer is an anime about 15 year old Tanjiro Kamado and his little sister Nezuko and their missions to turn Nezuko back into a human after being turned into a demon. Tanjiro and Nezuko go on different missions for the Demon Slayer Corps to defeat demons, and get closer to his goal of defeating Muzan Kibutsuji, the demon who turned Nezuko into a demon.<br><br>
                 Fullmetal Alchemist: Fullmetal Alchemist follows the story of young Edward and Alphonse Elric, the Elric brothers. They are on a mission to restore their old bodies after a transmutation gone wrong. After their mother died they tried to bring her back to life, Edward lost an arm and a leg, and Alphonse lost his whole body. Edward and Alphonse join the military as State Alchemist, and try and return their bodies to their former glory after being left with a metal arm and leg, and a soul in a metal suit of armor.<br><br>
                 Death Note: Death Note is the story of young Light Yagami, a smart boy who one day crossed by a notebook on the ground titled "Death Note". After reading the instructions of the book he sees a man on the news when buying groceries. He sees the man and writes his name in the book and to his surprise, the man gets hit by a car after chasing after a young girl. Later he is accompanied by a shinigami named Ryuk. Light, along with Ryuk, goes on a mission, killing every criminal he sees on the news, in an attempt to cleanse the world.<br><br>
-                A Silent Voice: A Silent Voice is a movie that follows Shōya Ishida and his adventure for forgiveness of being an old bully. Back in elementary school he would bully deaf girl Shōko Nishimiya, and after not seeing her for years, he found her again in high school where others would bully her instead. Ishida tries to help her, but she is scared of him, as he used to be a bully of hers. The movie is based around Ishida's adventure for forgiveness and friendship from Nishimiya. It's a drama movie and has some sensetive topics so if you think you wouldn't like the movie, or the topics it addresses, don't watch it, because being uncomfortable by the messages a movie, show, or anime sends, thats not good.</p>
+                A Silent Voice: A Silent Voice is a movie that follows Shōya Ishida and his adventure for forgiveness of being an old bully. Back in elementary school he would bully deaf girl Shōko Nishimiya, and after not seeing her for years, he found her again in high school where others would bully her instead. Ishida tries to help her, but she is scared of him, as he used to be a bully of hers. The movie is based around Ishida's adventure for forgiveness and friendship from Nishimiya. It's a drama movie and has some sensitive topics so keep that in mind.</p>
+                </div>
             </main>
-            <aside>
-                <p>Welcome! Thanks for coming to the website! This is my final project for Web Development, and this is page one. On this page I'll be listing off different animes, and a short description of their story. Up at the top we have a nav bar to take you to other pages, and to toggle a dark mode. I hope you enjoy!</p>
+            <aside class="pageOneAside">
+                <h3>Welcome! Thanks for coming to the website! This is my final project for Web Development, and this is page one. On this page I'll be listing off different animes, and a short description of their story. Up at the top we have a nav bar to take you to other pages, and to toggle a dark mode. I hope you enjoy!</h3>
             </aside>
         </div>
-        <footer></footer>
+        <footer>
+            <div>
+                <p>This website was created by Jason Musser in 2022 for a web development project.</p>
+            </div>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
         <script src="./script.js"></script>
     </body>
