--- a/FinalProject2.html
+++ b/FinalProject2.html
@@ -4,28 +4,25 @@
         <meta charset="UTF-8">
         <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Final Project</title>
+        <meta name="author" content="Jason Musser">
+        <meta name="keywords" content="shonen, final, anime">
+        <meta name="description" content="This is Jasons final project.">
+        <title>Page Two</title>
         <link type="text/css" rel="stylesheet" href="style.css"/>
     </head>
     <body window.onload = function() {onload()}>
         <header>
             <h1>Animes to Watch Page Two</h1>
         </header>
-        <nav>
-            <div class="button"> 
-                <a href="FinalProject1.html">Page One</a>
-            </div>
-            <div class="button"> 
-                <a href="FinalProject2.html">Page Two</a>
-            </div>
-            <div class="button"> 
-                <a href="FinalProject3.html">Page Three</a>
-            </div>
-            <div class="button">
-            </div>
-        </nav>
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="FinalProject1.html">Page One</a></li>
+                    <li><a href="FinalProject2.html">Page Two</a></li>
+                    <li><a href="FinalProject3.html">Page Three</a></li>
+                </ul>
+            </nav>
         <div class="content">
-            <main>
+            <main class="pageTwoMain">
                 <table class="animeTable">
                       <tr>
                         <th>Name</th>
@@ -33,37 +30,41 @@
                         <th>Release Date</th>
                         <th>Image</th>
                     </tr>
-                    <tr>
+                    <tr class="demonSlayer">
                         <td>Demon Slayer: Kimetsu no Yaiba</td>
                         <td>There is a total of 39 episodes as of now, the show is still running.</td>
                         <td>Released on April 6, 2019</td>
-                        <td><img src="DemonSlayerImage.jpg" class="animeTableImage"><p class="tableText">This image was taken by kiliweb on openfoodfacts.org, a link to the license can be found <a href="https://creativecommons.org/licenses/by-sa/3.0/" class="licenseLinks">here</a> </p></td>
+                        <td><img src="DemonSlayerImage.jpg" class="animeTableImage" alt="Image of Demon Slayer Manga"><p class="tableText">This image was taken by kiliweb on openfoodfacts.org, a link to the license can be found <a href="https://creativecommons.org/licenses/by-sa/3.0/" class="licenseLinks">here</a> </p></td>
                     </tr>
-                    <tr>
+                    <tr class="fullmetal">
                         <td>Fullmetal Alchemist</td>
                         <td>There is a total of 51 episodes.</td>
                         <td>Released on October 4, 2003</td>
-                        <td><img src="fullmetalAlchemist.jpg" class="animeTableImage"></td>
+                        <td><img src="fullmetalAlchemist.jpg" class="animeTableImage" alt="Image of Fullmetal Alchemist Edward Elric"></td>
                     </tr>
-                    <tr>
+                    <tr class="deathNote">
                         <td>Death Note</td>
                         <td>There is a total of 37 episodes.</td>
                         <td>Released on October 3, 2006</td>
-                        <td><img src="deathNote.jpg" class="animeTableImage"><p class="tableText">This image was taken by Alatorde on wikimedia.org, a link to the license can be found <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" class="licenseLinks">here</a></p></td>
+                        <td><img src="deathNote.jpg" class="animeTableImage" alt="Image of Death Note Logo"><p class="tableText">This image was taken by Alatorde on wikimedia.org, a link to the license can be found <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en" class="licenseLinks">here</a></p></td>
                     </tr>
-                    <tr>
+                    <tr class="silentVoice">
                         <td>A Silent Voice</td>
                         <td>The movie runs for 2 hours and 9 minutes.</td>
                         <td>Released on October 20, 2017</td>
-                        <td><img src="aSilentVoice.jpg" class="animeTableImage"><p class="tableText">This image was taken by Alicia Cousin on fun-academy.fr, a link to the license can be found <a href="https://creativecommons.org/licenses/by-nc-nd/3.0/" class="licenseLinks">here</a></p></td>
+                        <td><img src="aSilentVoice.jpg" class="animeTableImage" alt="Image of A Silent Voice Cover"><p class="tableText">This image was taken by Alicia Cousin on fun-academy.fr, a link to the license can be found <a href="https://creativecommons.org/licenses/by-nc-nd/3.0/" class="licenseLinks">here</a></p></td>
                     </tr>
                 </table>
             </main>
-            <aside>
-                <p>Hello! This is page two of my final project for my Web Development class. On this page there is a table of all the previously mentioned animes in page one. This will have the name of the anime, the release date, how many episodes it has, and an image from the anime. Happy reading!</p>
+            <aside class="pageTwoAside">
+                <h3>Hello! This is page two of my final project for my Web Development class. On this page there is a table of all the previously mentioned animes in page one. This will have the name of the anime, the release date, how many episodes it has, and an image from the anime. Happy reading!</h3>
             </aside>
         </div>
-        <footer></footer>
+        <footer>
+            <div>
+                <p>This website was created by Jason Musser in 2022 for a web development project.</p>
+            </div>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
         <script src="./script.js"></script>
     </body>
