--- a/FinalProject3.html
+++ b/FinalProject3.html
@@ -4,35 +4,67 @@
         <meta charset="UTF-8">
         <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Final Project</title>
+        <meta name="author" content="Jason Musser">
+        <meta name="keywords" content="shonen, final, anime">
+        <meta name="description" content="This is Jasons final project.">
+        <title>Page Three</title>
         <link type="text/css" rel="stylesheet" href="style.css"/>
     </head>
     <body window.onload = function() {onload()}>
         <header>
             <h1>Animes to Watch Page Three</h1>
         </header>
-        <nav>
-            <div class="button"> 
-                <a href="FinalProject1.html">Page One</a>
-            </div>
-            <div class="button"> 
-                <a href="FinalProject2.html">Page Two</a>
-            </div>
-            <div class="button"> 
-                <a href="FinalProject3.html">Page Three</a>
-            </div>
-            <div class="button">
-            </div>
-        </nav>
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="FinalProject1.html">Page One</a></li>
+                    <li><a href="FinalProject2.html">Page Two</a></li>
+                    <li><a href="FinalProject3.html">Page Three</a></li>
+                </ul>
+            </nav>
         <div class="content">
-            <main>
-                <p>Hello!</p>
+            <main class="pageThreeMain">
+                <ol>
+                    <li>
+                    Demon Slayer: Kimetsu no Yaiba
+                    </li>
+                    <li>
+                    Blue Excorist
+                    </li>
+                    <li>
+                    Fullmetal Alchemist
+                    </li>
+                    <li>
+                    Death Note
+                    </li>
+                    <li>
+                    Bleach
+                    </li>
+                    <li>
+                    Fairy Tail
+                    </li>
+                    <li>
+                    Seven Deadly Sins
+                    </li>
+                    <li>
+                    My Hero Academia
+                    </li>
+                    <li>
+                    A Silent Voice
+                    </li>
+                    <li>
+                    The Promised Neverland
+                    </li>
+                </ol>
             </main>
-            <aside>
-                <p>This is the final page in my final project for Web Development. On this page I'll be listing some more animes, and my favorites that you've been shown today. They will be ranked from favorite to least favorite. Thank you for looking at the website, have a good day!</p>
+            <aside class="pageThreeAside">
+                <h3>This is the final page in my final project for Web Development. On this page I'll be listing some more animes, and my favorites that you've been shown today. They will be ranked from favorite to least favorite. Keep in mind these animes are still in my top ten and I do recommend all of them, the ones I've talked about in the first two pages are just ones I think that more people would like. Thank you for looking at the website, have a good day!</h3>
             </aside>
         </div>
-        <footer></footer>
+        <footer>
+            <div>
+                <p>This website was created by Jason Musser in 2022 for a web development project.</p>
+            </div>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
         <script src="./script.js"></script>
     </body>
